--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,9 @@ jobs:
         with:
           python-version: '3.11'
 
+      - name: Create test config
+        run: cp config.example.yaml config.yaml
+
       - name: Cache pip
         uses: actions/cache@v4
         with:
