--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,7 +20,8 @@ repos:
   - repo: https://github.com/Yelp/detect-secrets
     rev: v1.5.0
     hooks:
-      - id: detect-secrets-hook
+      - id: detect-secrets
+        args: ['--baseline', '.secrets.baseline']
 
   - repo: https://github.com/pycqa/flake8
     rev: 6.0.0
