--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
   - repo: https://github.com/psf/black
-    rev: stable
+    rev: 26.1.0
     hooks:
       - id: black
         language_version: python3
@@ -18,12 +18,13 @@ repos:
       - id: check-yaml
 
   - repo: https://github.com/Yelp/detect-secrets
-    rev: 1.5.0
+    rev: v1.5.0
     hooks:
-      - id: detect-secrets-hook
+      - id: detect-secrets
+        args: ['--baseline', '.secrets.baseline']
 
   - repo: https://github.com/pycqa/flake8
-    rev: 6.0.0
+    rev: 7.3.0
     hooks:
       - id: flake8
         args: ["--max-line-length=88"]
